<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.polyglotpocket.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.polyglotpocket.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <!-- Action to open training screen -->
        <action
            android:id="@+id/action_home_to_training"
            app:destination="@id/trainingFragment" />

        <!-- Debug action for API testing -->
        <action
            android:id="@+id/action_home_to_apitest"
            app:destination="@id/apiTestFragment" />
    </fragment>

    <!-- Training screen -->
    <fragment
        android:id="@+id/trainingFragment"
        android:name="com.example.polyglotpocket.ui.training.TrainingFragment"
        android:label="@string/training_title"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/apiTestFragment"
        android:name="com.example.polyglotpocket.ui.apitest.ApiTestFragment"
        android:label="@string/apitest_title"
        tools:layout="@layout/fragment_api_test" />

</navigation>